[package]
name = "kvs"
version = "0.1.0"
authors = ["alanhkarp <alanhkarp@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}
structopt = "0.2"

[lib]
test = false

[[bin]]
name = "kvs"
test = false

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"